removed top margin, fixed top white space issue

--- a/css/index.css
+++ b/css/index.css
@@ -3,21 +3,30 @@ h1.centerClass {
   color: limegreen;
 }
 
-img {
+/* img {
   object-fit: cover;
   width: 100%;
   height: 100%;
   position: fixed;
   z-index: -1;
   opacity: 0.4;
-}
+} */
 
 #container {
-  width: 1279px;
+  width: 100%;
   margin: auto;
-  margin-top: 50px;
+
+  background-image: url("../images/img-2.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
 
+/* .header-shadow {
+  background-image: url("../images/header-shade.jpg");
+  width: XXpx;
+  height: XXpx;
+} */
 #form {
   display: flex;
   flex-direction: column;
